nohup.out
Traceback (most recent call last):
  File "/home/ovpaa-qao-mibaguisa/TINQAD/index.py", line 12, in <module>
    from apps import commonmodules as cm
  File "/home/ovpaa-qao-mibaguisa/TINQAD/apps/commonmodules.py", line 216
    html.P("� 2023-2024 Diliman. Some rights reserved", className="mb-0", style={'font-size': '12px'}),
                                                      ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xa9 in position 0: invalid start byte
